fix: enforce US locale for duration formatting and remove unused AnaliseRepo dependency